[gd_scene load_steps=18 format=3 uid="uid://k652evkoa0jy"]

[ext_resource type="Script" uid="uid://hh1vgvhlgy5k" path="res://scripts/ui/player_ui.gd" id="1_7nxh8"]
[ext_resource type="Texture2D" uid="uid://dan8nixc05p74" path="res://assets/mainCharacter/Knight/Knight/idle.png" id="2_ek0wl"]
[ext_resource type="FontFile" uid="uid://rs55abjy0jvm" path="res://assets/fonts/monogram-extended.ttf" id="4_dr0db"]
[ext_resource type="Texture2D" uid="uid://gvtju1rai2hl" path="res://assets/items/Free - Raven Fantasy Icons/Separated Files/64x64/fc657.png" id="4_f4ks8"]
[ext_resource type="Texture2D" uid="uid://bw3gocm332lrb" path="res://assets/items/Free - Raven Fantasy Icons/Separated Files/64x64/fc659.png" id="4_w0fp0"]
[ext_resource type="Texture2D" uid="uid://l8c6kaa2dl1" path="res://assets/items/Free - Raven Fantasy Icons/Separated Files/64x64/fc594.png" id="6_u58rh"]
[ext_resource type="Texture2D" uid="uid://cak3wgcq24tww" path="res://assets/items/Free - Raven Fantasy Icons/Separated Files/64x64/fc597.png" id="7_00fnu"]
[ext_resource type="Texture2D" uid="uid://bvqjiduxitgse" path="res://assets/items/Free - Raven Fantasy Icons/Separated Files/64x64/fc598.png" id="8_jinap"]
[ext_resource type="Texture2D" uid="uid://b7dw447qbrin1" path="res://assets/items/Free - Raven Fantasy Icons/Separated Files/64x64/fc724.png" id="9_78e7p"]

[sub_resource type="Resource" id="Resource_0cbkn"]
metadata/__load_path__ = "res://themes/character_ui_theme.tres"

[sub_resource type="Resource" id="Resource_wm4y2"]
metadata/__load_path__ = "res://themes/character_ui_theme.tres"

[sub_resource type="AtlasTexture" id="AtlasTexture_76mdu"]
atlas = ExtResource("2_ek0wl")
region = Rect2(0, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ljhs"]
atlas = ExtResource("2_ek0wl")
region = Rect2(112, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tv6e"]
atlas = ExtResource("2_ek0wl")
region = Rect2(224, 0, 112, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lsk3"]
atlas = ExtResource("2_ek0wl")
region = Rect2(336, 0, 112, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_21qf1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76mdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ljhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tv6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lsk3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_p4vn6"]
font = ExtResource("4_dr0db")
font_size = 6
shadow_size = 0

[node name="player_ui" type="Control"]
layout_mode = 3
anchor_right = 0.225
anchor_bottom = 0.241
offset_bottom = -0.0699997
script = ExtResource("1_7nxh8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 108.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 3

[node name="char_visor" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = SubResource("Resource_0cbkn")

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/char_visor"]
clip_contents = true
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 59.0
offset_bottom = 60.0
theme = SubResource("Resource_wm4y2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="HBoxContainer/char_visor/PanelContainer"]
position = Vector2(32, 32)
scale = Vector2(2.3, 2.3)
sprite_frames = SubResource("SpriteFrames_21qf1")
frame_progress = 0.810679

[node name="stats_card" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 3
alignment = 1

[node name="health_card" type="HBoxContainer" parent="HBoxContainer/stats_card"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Control" type="Control" parent="HBoxContainer/stats_card/health_card"]
custom_minimum_size = Vector2(2, 5)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/stats_card/health_card/Control"]
position = Vector2(3, 3)
scale = Vector2(0.07, 0.07)
texture = ExtResource("4_w0fp0")

[node name="Label" type="Label" parent="HBoxContainer/stats_card/health_card"]
layout_mode = 2
text = "PNTS SALUD:"
label_settings = SubResource("LabelSettings_p4vn6")

[node name="health_label" type="Label" parent="HBoxContainer/stats_card/health_card"]
layout_mode = 2
text = "50"
label_settings = SubResource("LabelSettings_p4vn6")

[node name="phy_dmg_card" type="HBoxContainer" parent="HBoxContainer/stats_card"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Control" type="Control" parent="HBoxContainer/stats_card/phy_dmg_card"]
custom_minimum_size = Vector2(2, 5)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/stats_card/phy_dmg_card/Control"]
position = Vector2(3, 3)
scale = Vector2(0.07, 0.07)
texture = ExtResource("4_f4ks8")

[node name="Label" type="Label" parent="HBoxContainer/stats_card/phy_dmg_card"]
layout_mode = 2
text = "ATQ FÍSICO:"
label_settings = SubResource("LabelSettings_p4vn6")

[node name="phy_dmg_label" type="Label" parent="HBoxContainer/stats_card/phy_dmg_card"]
layout_mode = 2
text = "50"
label_settings = SubResource("LabelSettings_p4vn6")

[node name="mag_dmg_card" type="HBoxContainer" parent="HBoxContainer/stats_card"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Control" type="Control" parent="HBoxContainer/stats_card/mag_dmg_card"]
custom_minimum_size = Vector2(2, 5)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/stats_card/mag_dmg_card/Control"]
position = Vector2(3, 3)
scale = Vector2(0.07, 0.07)
texture = ExtResource("6_u58rh")

[node name="Label" type="Label" parent="HBoxContainer/stats_card/mag_dmg_card"]
layout_mode = 2
text = "ATQ MÁGICO:"
label_settings = SubResource("LabelSettings_p4vn6")

[node name="mag_dmg_label" type="Label" parent="HBoxContainer/stats_card/mag_dmg_card"]
layout_mode = 2
text = "50"
label_settings = SubResource("LabelSettings_p4vn6")

[node name="phy_arm_card" type="HBoxContainer" parent="HBoxContainer/stats_card"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Control" type="Control" parent="HBoxContainer/stats_card/phy_arm_card"]
custom_minimum_size = Vector2(2, 5)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/stats_card/phy_arm_card/Control"]
position = Vector2(3, 3)
scale = Vector2(0.07, 0.07)
texture = ExtResource("7_00fnu")

[node name="Label" type="Label" parent="HBoxContainer/stats_card/phy_arm_card"]
layout_mode = 2
text = "ARM FÍSICA:"
label_settings = SubResource("LabelSettings_p4vn6")

[node name="phy_arm_label" type="Label" parent="HBoxContainer/stats_card/phy_arm_card"]
layout_mode = 2
text = "50"
label_settings = SubResource("LabelSettings_p4vn6")

[node name="mag_arm_card" type="HBoxContainer" parent="HBoxContainer/stats_card"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Control" type="Control" parent="HBoxContainer/stats_card/mag_arm_card"]
custom_minimum_size = Vector2(2, 5)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/stats_card/mag_arm_card/Control"]
position = Vector2(3, 3)
scale = Vector2(0.07, 0.07)
texture = ExtResource("8_jinap")

[node name="Label" type="Label" parent="HBoxContainer/stats_card/mag_arm_card"]
layout_mode = 2
text = "ARM MÁGICA:"
label_settings = SubResource("LabelSettings_p4vn6")

[node name="mag_arm_label" type="Label" parent="HBoxContainer/stats_card/mag_arm_card"]
layout_mode = 2
text = "50"
label_settings = SubResource("LabelSettings_p4vn6")

[node name="atck_spd_card" type="HBoxContainer" parent="HBoxContainer/stats_card"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Control" type="Control" parent="HBoxContainer/stats_card/atck_spd_card"]
custom_minimum_size = Vector2(2, 5)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/stats_card/atck_spd_card/Control"]
position = Vector2(3, 3)
scale = Vector2(0.07, 0.07)
texture = ExtResource("9_78e7p")

[node name="Label" type="Label" parent="HBoxContainer/stats_card/atck_spd_card"]
layout_mode = 2
text = "VEL ATAQUE:"
label_settings = SubResource("LabelSettings_p4vn6")

[node name="atck_spd_label" type="Label" parent="HBoxContainer/stats_card/atck_spd_card"]
layout_mode = 2
text = "50"
label_settings = SubResource("LabelSettings_p4vn6")
